/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package dp.decorateur;

/**
 *
 * @author 33676
 */
public class FactureSimple extends Facture{

    @Override
    public void imprimeToi() {
        System.out.println("Je suis une facture Simple");
    }
    
}
