/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package dp.decorator;

/**
 *
 * @author 33676
 */
public class Dodo implements Dindon{

    @Override
    public void faitGlouGlou() {
        System.out.println("GlouGlou");
    }
    
}
