/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package dp.decorator.telephone;

/**
 *
 * @author M34LMAR
 */
public interface IChargeable {
    void recharger(int volts);
}
